Java 25+ is now required